fix black color hide in dark mode

--- a/src/app/application/dashboard/components/net-income/net-income.component.scss
+++ b/src/app/application/dashboard/components/net-income/net-income.component.scss
@@ -52,6 +52,9 @@
         color: #5b6565;
         line-height: 22px;
     }
+    .lastCycleValue{
+        color: #0d2222;
+    }
 }
 
 /* For Tablet View */
