--- a/src/app/application/dashboard/components/sales-target/sales-target.component.scss
+++ b/src/app/application/dashboard/components/sales-target/sales-target.component.scss
@@ -63,6 +63,9 @@
         color: #5b6565;
         line-height: 22px;
     }
+    .lastCycleValue{
+        color: #0d2222;
+    }
     .targetInput{
         border: none;
         border-bottom: 2px solid #00a5a3;
